# IgA_attachment_analysis

./: README.md  comments_about_data.txt  database 10-11-2017 FONDECYT.sav  environment.yml  main.py  pyproject.toml  requirements.txt
data_cortisol/: data
data_for_figures/: X_test.csv  X_train.csv  X_val.csv  data_figure_A.csv  data_figure_B.csv  data_figure_C.csv  data_figure_D.csv  data_figure_E.csv  data_figure_F.csv  data_figure_G_labels.csv  data_figure_G_samples.csv  rf_model.joblib  trace_bimodel_1.joblib  trace_bimodel_2.joblib
figure_generation/: creating_figure_2.ipynb  creating_figure_3.ipynb  creating_figure_4.ipynb  creating_figure_paper.ipynb
figures_SI/: Elisa 4 18.19.17.xlsx  auxiliar_functions.py  generating_figure.ipynb
generated_models/: inference_models_with_cortisol.joblib  inference_models_without_cortisol.joblib  rf_model.joblib  scaler_instance.joblib
inference_process/: 1_bayesian_analysis_IgA.ipynb  2_bayesian_analysis_cortisol_iga.ipynb  3_imputing_unknown_data_log.ipynb  3_predictive_attachment_model.ipynb
preprocessing_data/: 0_updated_data.ipynb  1_process_raw_data_iga.ipynb  2_process_raw_data_cortisol.ipynb
processed_data/: 1_processed_data.csv  1_processed_data_IgA.csv  2_processed_data_cortisol.csv  2_processed_data_with_attachment_predicted.csv  3_processed_data_iga_analyzed.csv  3_processed_data_with_attachment_predicted_log.csv  4_processed_cortisol_iga_data.csv  5_processed_data_iga_analyzed.csv  6_processed_data_iga_analyzed_with_predictions.csv  7_processed_cortisol_iga_data.csv
raw_data_spss/: desc_columns.txt  (+2 more)
(+56 files in other folders)
